Implement RouteType CRUD and structure
