# app/models/__init__.py
@@ -1,3 +1,4 @@
 from .county import County, CountySchema
 from .location import Location, LocationSchema
 from .surface_type import SurfaceType, SurfaceTypeSchema
+from .route_type import RouteType, RouteTypeSchema
